deploy: 57333ab6fdbf83ea68806de1738d228d7b6b3507

--- a/contributed_modules.html
+++ b/contributed_modules.html
@@ -46,6 +46,11 @@ title: Documentation
    simplesamlphp-module-adfs
   </a>
   This module adds support for WS-Federation
+  <ul>
+   <li>
+    [adfs.html]
+   </li>
+  </ul>
  </li>
  <li>
   <a href="https://github.com/simplesamlphp/simplesamlphp-module-aggregator">
@@ -64,42 +69,77 @@ title: Documentation
    simplesamlphp-module-authcrypt
   </a>
   This module provides authentication based on password hashes and htpasswd-files
+  <ul>
+   <li>
+    [authcrypt.html]
+   </li>
+  </ul>
  </li>
  <li>
   <a href="https://github.com/simplesamlphp/simplesamlphp-module-authfacebook">
    simplesamlphp-module-authfacebook
   </a>
   Authentication module to authenticate against Facebook
+  <ul>
+   <li>
+    [authfacebook.html]
+   </li>
+  </ul>
  </li>
  <li>
   <a href="https://github.com/simplesamlphp/simplesamlphp-module-authlinkedin">
    simplesamlphp-module-authlinkedin
   </a>
   Authentication module to authenticate against LinkedIn
+  <ul>
+   <li>
+    [oauthlinkedin.html]
+   </li>
+  </ul>
  </li>
  <li>
   <a href="https://github.com/simplesamlphp/simplesamlphp-module-authorize">
    simplesamlphp-module-authorize
   </a>
   This module provides a user authorization filter based on attribute matching
+  <ul>
+   <li>
+    [authorize.html]
+   </li>
+  </ul>
  </li>
  <li>
   <a href="https://github.com/simplesamlphp/simplesamlphp-module-authtwitter">
    simplesamlphp-module-authtwitter
   </a>
   Authentication module to authenticate against Twitter
+  <ul>
+   <li>
+    [oauthtwitter.html]
+   </li>
+  </ul>
  </li>
  <li>
   <a href="https://github.com/simplesamlphp/simplesamlphp-module-authwindowslive">
    simplesamlphp-module-authwindowslive
   </a>
   Authentication module to authenticate against Windows Live
+  <ul>
+   <li>
+    [windowsliveid.html]
+   </li>
+  </ul>
  </li>
  <li>
   <a href="https://github.com/simplesamlphp/simplesamlphp-module-authX509">
    simplesamlphp-module-authX509
   </a>
   Authentication module for X509 client certificates
+  <ul>
+   <li>
+    [authX509.html]
+   </li>
+  </ul>
  </li>
  <li>
   <a href="https://github.com/simplesamlphp/simplesamlphp-module-authyubikey">
@@ -118,6 +158,11 @@ title: Documentation
    simplesamlphp-module-cas
   </a>
   None
+  <ul>
+   <li>
+    [cas.html]
+   </li>
+  </ul>
  </li>
  <li>
   <a href="https://github.com/simplesamlphp/simplesamlphp-module-casserver">
@@ -136,12 +181,22 @@ title: Documentation
    simplesamlphp-module-consent
   </a>
   Consent module
+  <ul>
+   <li>
+    [consent.html]
+   </li>
+  </ul>
  </li>
  <li>
   <a href="https://github.com/simplesamlphp/simplesamlphp-module-consentadmin">
    simplesamlphp-module-consentadmin
   </a>
   None
+  <ul>
+   <li>
+    [consentAdmin.html]
+   </li>
+  </ul>
  </li>
 </ul></div>    <!-- /#content -->
 
