deploy: 145e3cd6540ecfa764884d38c28ef695a0fc7163

--- a/contributed_modules.html
+++ b/contributed_modules.html
@@ -35,12 +35,13 @@
 </h1>
 <ul>
  <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-adfs">
-   simplesamlphp-module-adfs
-  </a>
-  - This module adds support for WS-Federation
+  [simplesamlphp-module-adfs] - This module adds support for WS-Federation
   <ul>
    <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-adfs">
+     Repository
+    </a>
+    *
     <a href="contrib_modules/adfs.html">
      adfs.html
     </a>
@@ -48,24 +49,25 @@
   </ul>
  </li>
  <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-aggregator">
-   simplesamlphp-module-aggregator
-  </a>
-  - This is a module for SimpleSAMLphp that aggregates a set of SAML entities into SAML 2.0 metadata documents.
- </li>
- <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-aggregator2">
-   simplesamlphp-module-aggregator2
-  </a>
-  - A SimpleSAMLphp module for metadata aggregation.
- </li>
- <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-authcrypt">
-   simplesamlphp-module-authcrypt
-  </a>
-  - This module provides authentication based on password hashes and htpasswd-files
+  [simplesamlphp-module-aggregator] - This is a module for SimpleSAMLphp that aggregates a set of SAML entities into SAML 2.0 metadata documents.
   <ul>
    <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-aggregator">
+     Repository
+    </a>
+    * [simplesamlphp-module-aggregator2] - A SimpleSAMLphp module for metadata aggregation.
+   </li>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-aggregator2">
+     Repository
+    </a>
+    * [simplesamlphp-module-authcrypt] - This module provides authentication based on password hashes and htpasswd-files
+   </li>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-authcrypt">
+     Repository
+    </a>
+    *
     <a href="contrib_modules/authcrypt.html">
      authcrypt.html
     </a>
@@ -73,12 +75,13 @@
   </ul>
  </li>
  <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-authfacebook">
-   simplesamlphp-module-authfacebook
-  </a>
-  - Authentication module to authenticate against Facebook
+  [simplesamlphp-module-authfacebook] - Authentication module to authenticate against Facebook
   <ul>
    <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-authfacebook">
+     Repository
+    </a>
+    *
     <a href="contrib_modules/authfacebook.html">
      authfacebook.html
     </a>
@@ -86,12 +89,13 @@
   </ul>
  </li>
  <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-authlinkedin">
-   simplesamlphp-module-authlinkedin
-  </a>
-  - Authentication module to authenticate against LinkedIn
+  [simplesamlphp-module-authlinkedin] - Authentication module to authenticate against LinkedIn
   <ul>
    <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-authlinkedin">
+     Repository
+    </a>
+    *
     <a href="contrib_modules/oauthlinkedin.html">
      oauthlinkedin.html
     </a>
@@ -99,12 +103,13 @@
   </ul>
  </li>
  <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-authorize">
-   simplesamlphp-module-authorize
-  </a>
-  - This module provides a user authorization filter based on attribute matching
+  [simplesamlphp-module-authorize] - This module provides a user authorization filter based on attribute matching
   <ul>
    <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-authorize">
+     Repository
+    </a>
+    *
     <a href="contrib_modules/authorize.html">
      authorize.html
     </a>
@@ -112,12 +117,13 @@
   </ul>
  </li>
  <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-authtwitter">
-   simplesamlphp-module-authtwitter
-  </a>
-  - Authentication module to authenticate against Twitter
+  [simplesamlphp-module-authtwitter] - Authentication module to authenticate against Twitter
   <ul>
    <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-authtwitter">
+     Repository
+    </a>
+    *
     <a href="contrib_modules/oauthtwitter.html">
      oauthtwitter.html
     </a>
@@ -125,12 +131,13 @@
   </ul>
  </li>
  <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-authwindowslive">
-   simplesamlphp-module-authwindowslive
-  </a>
-  - Authentication module to authenticate against Windows Live
+  [simplesamlphp-module-authwindowslive] - Authentication module to authenticate against Windows Live
   <ul>
    <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-authwindowslive">
+     Repository
+    </a>
+    *
     <a href="contrib_modules/windowsliveid.html">
      windowsliveid.html
     </a>
@@ -138,12 +145,13 @@
   </ul>
  </li>
  <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-authX509">
-   simplesamlphp-module-authX509
-  </a>
-  - Authentication module for X509 client certificates
+  [simplesamlphp-module-authX509] - Authentication module for X509 client certificates
   <ul>
    <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-authX509">
+     Repository
+    </a>
+    *
     <a href="contrib_modules/authX509.html">
      authX509.html
     </a>
@@ -151,24 +159,25 @@
   </ul>
  </li>
  <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-authyubikey">
-   simplesamlphp-module-authyubikey
-  </a>
-  - simplesamlphp-module-authyubiKey
- </li>
- <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-autotest">
-   simplesamlphp-module-autotest
-  </a>
-  - This module provides an interface to do automatic testing of authentication sources.
- </li>
- <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-cas">
-   simplesamlphp-module-cas
-  </a>
-  - None
+  [simplesamlphp-module-authyubikey] - simplesamlphp-module-authyubiKey
   <ul>
    <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-authyubikey">
+     Repository
+    </a>
+    * [simplesamlphp-module-autotest] - This module provides an interface to do automatic testing of authentication sources.
+   </li>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-autotest">
+     Repository
+    </a>
+    * [simplesamlphp-module-cas] - None
+   </li>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-cas">
+     Repository
+    </a>
+    *
     <a href="contrib_modules/cas.html">
      cas.html
     </a>
@@ -176,24 +185,25 @@
   </ul>
  </li>
  <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-casserver">
-   simplesamlphp-module-casserver
-  </a>
-  - CAS 1.0 and 2.0 compliant CAS server module for simpleSAMLphp
- </li>
- <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-cdc">
-   simplesamlphp-module-cdc
-  </a>
-  - Common domain cookies
- </li>
- <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-consent">
-   simplesamlphp-module-consent
-  </a>
-  - Consent module
+  [simplesamlphp-module-casserver] - CAS 1.0 and 2.0 compliant CAS server module for simpleSAMLphp
   <ul>
    <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-casserver">
+     Repository
+    </a>
+    * [simplesamlphp-module-cdc] - Common domain cookies
+   </li>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-cdc">
+     Repository
+    </a>
+    * [simplesamlphp-module-consent] - Consent module
+   </li>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-consent">
+     Repository
+    </a>
+    *
     <a href="contrib_modules/consent.html">
      consent.html
     </a>
@@ -201,12 +211,13 @@
   </ul>
  </li>
  <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-consentadmin">
-   simplesamlphp-module-consentadmin
-  </a>
-  - None
+  [simplesamlphp-module-consentadmin] - None
   <ul>
    <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-consentadmin">
+     Repository
+    </a>
+    *
     <a href="contrib_modules/consentAdmin.html">
      consentAdmin.html
     </a>
