deploy: b17af1d4ae6cf4771da9d16819cde7538c5e76c8

--- a/contributed_modules.html
+++ b/contributed_modules.html
@@ -41,7 +41,8 @@
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-adfs">
      Repository
     </a>
-    *
+   </li>
+   <li>
     <a href="contrib_modules/adfs.html">
      adfs.html
     </a>
@@ -55,19 +56,28 @@
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-aggregator">
      Repository
     </a>
-    * [simplesamlphp-module-aggregator2] - A SimpleSAMLphp module for metadata aggregation.
    </li>
+  </ul>
+ </li>
+ <li>
+  [simplesamlphp-module-aggregator2] - A SimpleSAMLphp module for metadata aggregation.
+  <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-aggregator2">
      Repository
     </a>
-    * [simplesamlphp-module-authcrypt] - This module provides authentication based on password hashes and htpasswd-files
    </li>
+  </ul>
+ </li>
+ <li>
+  [simplesamlphp-module-authcrypt] - This module provides authentication based on password hashes and htpasswd-files
+  <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authcrypt">
      Repository
     </a>
-    *
+   </li>
+   <li>
     <a href="contrib_modules/authcrypt.html">
      authcrypt.html
     </a>
@@ -81,7 +91,8 @@
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authfacebook">
      Repository
     </a>
-    *
+   </li>
+   <li>
     <a href="contrib_modules/authfacebook.html">
      authfacebook.html
     </a>
@@ -95,7 +106,8 @@
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authlinkedin">
      Repository
     </a>
-    *
+   </li>
+   <li>
     <a href="contrib_modules/oauthlinkedin.html">
      oauthlinkedin.html
     </a>
@@ -109,7 +121,8 @@
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authorize">
      Repository
     </a>
-    *
+   </li>
+   <li>
     <a href="contrib_modules/authorize.html">
      authorize.html
     </a>
@@ -123,7 +136,8 @@
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authtwitter">
      Repository
     </a>
-    *
+   </li>
+   <li>
     <a href="contrib_modules/oauthtwitter.html">
      oauthtwitter.html
     </a>
@@ -137,7 +151,8 @@
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authwindowslive">
      Repository
     </a>
-    *
+   </li>
+   <li>
     <a href="contrib_modules/windowsliveid.html">
      windowsliveid.html
     </a>
@@ -151,7 +166,8 @@
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authX509">
      Repository
     </a>
-    *
+   </li>
+   <li>
     <a href="contrib_modules/authX509.html">
      authX509.html
     </a>
@@ -165,19 +181,28 @@
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authyubikey">
      Repository
     </a>
-    * [simplesamlphp-module-autotest] - This module provides an interface to do automatic testing of authentication sources.
    </li>
+  </ul>
+ </li>
+ <li>
+  [simplesamlphp-module-autotest] - This module provides an interface to do automatic testing of authentication sources.
+  <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-autotest">
      Repository
     </a>
-    * [simplesamlphp-module-cas] - None
    </li>
+  </ul>
+ </li>
+ <li>
+  [simplesamlphp-module-cas] - None
+  <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-cas">
      Repository
     </a>
-    *
+   </li>
+   <li>
     <a href="contrib_modules/cas.html">
      cas.html
     </a>
@@ -191,19 +216,28 @@
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-casserver">
      Repository
     </a>
-    * [simplesamlphp-module-cdc] - Common domain cookies
    </li>
+  </ul>
+ </li>
+ <li>
+  [simplesamlphp-module-cdc] - Common domain cookies
+  <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-cdc">
      Repository
     </a>
-    * [simplesamlphp-module-consent] - Consent module
    </li>
+  </ul>
+ </li>
+ <li>
+  [simplesamlphp-module-consent] - Consent module
+  <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-consent">
      Repository
     </a>
-    *
+   </li>
+   <li>
     <a href="contrib_modules/consent.html">
      consent.html
     </a>
@@ -217,7 +251,8 @@
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-consentadmin">
      Repository
     </a>
-    *
+   </li>
+   <li>
     <a href="contrib_modules/consentAdmin.html">
      consentAdmin.html
     </a>
