deploy: e3e77e284979c135db0020deee54dfa744ab14b9

--- a/contributed_modules.html
+++ b/contributed_modules.html
@@ -35,7 +35,8 @@
 </h1>
 <ul>
  <li>
-  [simplesamlphp-module-adfs] - This module adds support for WS-Federation
+  simplesamlphp-module-adfs
+  This module adds support for WS-Federation
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-adfs">
@@ -50,7 +51,8 @@
   </ul>
  </li>
  <li>
-  [simplesamlphp-module-aggregator] - This is a module for SimpleSAMLphp that aggregates a set of SAML entities into SAML 2.0 metadata documents.
+  simplesamlphp-module-aggregator
+  This is a module for SimpleSAMLphp that aggregates a set of SAML entities into SAML 2.0 metadata documents.
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-aggregator">
@@ -60,7 +62,8 @@
   </ul>
  </li>
  <li>
-  [simplesamlphp-module-aggregator2] - A SimpleSAMLphp module for metadata aggregation.
+  simplesamlphp-module-aggregator2
+  A SimpleSAMLphp module for metadata aggregation.
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-aggregator2">
@@ -70,7 +73,8 @@
   </ul>
  </li>
  <li>
-  [simplesamlphp-module-authcrypt] - This module provides authentication based on password hashes and htpasswd-files
+  simplesamlphp-module-authcrypt
+  This module provides authentication based on password hashes and htpasswd-files
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authcrypt">
@@ -85,7 +89,8 @@
   </ul>
  </li>
  <li>
-  [simplesamlphp-module-authfacebook] - Authentication module to authenticate against Facebook
+  simplesamlphp-module-authfacebook
+  Authentication module to authenticate against Facebook
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authfacebook">
@@ -100,7 +105,8 @@
   </ul>
  </li>
  <li>
-  [simplesamlphp-module-authlinkedin] - Authentication module to authenticate against LinkedIn
+  simplesamlphp-module-authlinkedin
+  Authentication module to authenticate against LinkedIn
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authlinkedin">
@@ -115,7 +121,8 @@
   </ul>
  </li>
  <li>
-  [simplesamlphp-module-authorize] - This module provides a user authorization filter based on attribute matching
+  simplesamlphp-module-authorize
+  This module provides a user authorization filter based on attribute matching
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authorize">
@@ -130,7 +137,8 @@
   </ul>
  </li>
  <li>
-  [simplesamlphp-module-authtwitter] - Authentication module to authenticate against Twitter
+  simplesamlphp-module-authtwitter
+  Authentication module to authenticate against Twitter
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authtwitter">
@@ -145,7 +153,8 @@
   </ul>
  </li>
  <li>
-  [simplesamlphp-module-authwindowslive] - Authentication module to authenticate against Windows Live
+  simplesamlphp-module-authwindowslive
+  Authentication module to authenticate against Windows Live
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authwindowslive">
@@ -160,7 +169,8 @@
   </ul>
  </li>
  <li>
-  [simplesamlphp-module-authX509] - Authentication module for X509 client certificates
+  simplesamlphp-module-authX509
+  Authentication module for X509 client certificates
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authX509">
@@ -175,7 +185,8 @@
   </ul>
  </li>
  <li>
-  [simplesamlphp-module-authyubikey] - simplesamlphp-module-authyubiKey
+  simplesamlphp-module-authyubikey
+  simplesamlphp-module-authyubiKey
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authyubikey">
@@ -185,7 +196,8 @@
   </ul>
  </li>
  <li>
-  [simplesamlphp-module-autotest] - This module provides an interface to do automatic testing of authentication sources.
+  simplesamlphp-module-autotest
+  This module provides an interface to do automatic testing of authentication sources.
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-autotest">
@@ -195,7 +207,8 @@
   </ul>
  </li>
  <li>
-  [simplesamlphp-module-cas] - None
+  simplesamlphp-module-cas
+  None
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-cas">
@@ -210,7 +223,8 @@
   </ul>
  </li>
  <li>
-  [simplesamlphp-module-casserver] - CAS 1.0 and 2.0 compliant CAS server module for simpleSAMLphp
+  simplesamlphp-module-casserver
+  CAS 1.0 and 2.0 compliant CAS server module for simpleSAMLphp
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-casserver">
@@ -220,7 +234,8 @@
   </ul>
  </li>
  <li>
-  [simplesamlphp-module-cdc] - Common domain cookies
+  simplesamlphp-module-cdc
+  Common domain cookies
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-cdc">
@@ -230,7 +245,8 @@
   </ul>
  </li>
  <li>
-  [simplesamlphp-module-consent] - Consent module
+  simplesamlphp-module-consent
+  Consent module
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-consent">
@@ -245,7 +261,8 @@
   </ul>
  </li>
  <li>
-  [simplesamlphp-module-consentadmin] - None
+  simplesamlphp-module-consentadmin
+  None
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-consentadmin">
