deploy: 6cd29150857163867591374ccd4034b4b804ad60

--- a/contributed_modules.html
+++ b/contributed_modules.html
@@ -36,9 +36,7 @@
 <ul>
  <li>
   simplesamlphp-module-adfs
- </li>
- <li>
-  This module adds support for WS-Federation
+: This module adds support for WS-Federation
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-adfs">
@@ -54,9 +52,7 @@
  </li>
  <li>
   simplesamlphp-module-aggregator
- </li>
- <li>
-  This is a module for SimpleSAMLphp that aggregates a set of SAML entities into SAML 2.0 metadata documents.
+: This is a module for SimpleSAMLphp that aggregates a set of SAML entities into SAML 2.0 metadata documents.
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-aggregator">
@@ -67,9 +63,7 @@
  </li>
  <li>
   simplesamlphp-module-aggregator2
- </li>
- <li>
-  A SimpleSAMLphp module for metadata aggregation.
+: A SimpleSAMLphp module for metadata aggregation.
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-aggregator2">
@@ -80,9 +74,7 @@
  </li>
  <li>
   simplesamlphp-module-authcrypt
- </li>
- <li>
-  This module provides authentication based on password hashes and htpasswd-files
+: This module provides authentication based on password hashes and htpasswd-files
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authcrypt">
@@ -98,9 +90,7 @@
  </li>
  <li>
   simplesamlphp-module-authfacebook
- </li>
- <li>
-  Authentication module to authenticate against Facebook
+: Authentication module to authenticate against Facebook
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authfacebook">
@@ -116,9 +106,7 @@
  </li>
  <li>
   simplesamlphp-module-authlinkedin
- </li>
- <li>
-  Authentication module to authenticate against LinkedIn
+: Authentication module to authenticate against LinkedIn
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authlinkedin">
@@ -134,9 +122,7 @@
  </li>
  <li>
   simplesamlphp-module-authorize
- </li>
- <li>
-  This module provides a user authorization filter based on attribute matching
+: This module provides a user authorization filter based on attribute matching
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authorize">
@@ -152,9 +138,7 @@
  </li>
  <li>
   simplesamlphp-module-authtwitter
- </li>
- <li>
-  Authentication module to authenticate against Twitter
+: Authentication module to authenticate against Twitter
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authtwitter">
@@ -170,9 +154,7 @@
  </li>
  <li>
   simplesamlphp-module-authwindowslive
- </li>
- <li>
-  Authentication module to authenticate against Windows Live
+: Authentication module to authenticate against Windows Live
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authwindowslive">
@@ -188,9 +170,7 @@
  </li>
  <li>
   simplesamlphp-module-authX509
- </li>
- <li>
-  Authentication module for X509 client certificates
+: Authentication module for X509 client certificates
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authX509">
@@ -206,9 +186,7 @@
  </li>
  <li>
   simplesamlphp-module-authyubikey
- </li>
- <li>
-  simplesamlphp-module-authyubiKey
+: simplesamlphp-module-authyubiKey
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authyubikey">
@@ -219,9 +197,7 @@
  </li>
  <li>
   simplesamlphp-module-autotest
- </li>
- <li>
-  This module provides an interface to do automatic testing of authentication sources.
+: This module provides an interface to do automatic testing of authentication sources.
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-autotest">
@@ -232,9 +208,7 @@
  </li>
  <li>
   simplesamlphp-module-cas
- </li>
- <li>
-  None
+: None
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-cas">
@@ -250,9 +224,7 @@
  </li>
  <li>
   simplesamlphp-module-casserver
- </li>
- <li>
-  CAS 1.0 and 2.0 compliant CAS server module for simpleSAMLphp
+: CAS 1.0 and 2.0 compliant CAS server module for simpleSAMLphp
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-casserver">
@@ -263,9 +235,7 @@
  </li>
  <li>
   simplesamlphp-module-cdc
- </li>
- <li>
-  Common domain cookies
+: Common domain cookies
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-cdc">
@@ -276,9 +246,7 @@
  </li>
  <li>
   simplesamlphp-module-consent
- </li>
- <li>
-  Consent module
+: Consent module
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-consent">
@@ -294,9 +262,7 @@
  </li>
  <li>
   simplesamlphp-module-consentadmin
- </li>
- <li>
-  None
+: None
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-consentadmin">
