Simplify redirect page

--- a/resources/index.html
+++ b/resources/index.html
@@ -1,36 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-<head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta http-equiv="Content-Language" content="en" />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Language" content="en">
+  <meta http-equiv="refresh" content="0; url=./latest/index.html">
 
-	<!-- JQuery -->
-	<!-- 
-	<script type="text/javascript" src="res/js/jquery.js"></script>
-	<script type="text/javascript" src="res/js/jquery-ui.js"></script>
-
-	<link rel="stylesheet" media="screen" type="text/css" href="res/js/uitheme/jquery-ui-themeroller.css" /> 
-	<style>
-	  mark {
-        background: orange;
-        color: black;
-      }
-    </style>  
-	-->
-	
-	<!-- Foodle: CSS -->	
-	<link rel="stylesheet" media="screen" type="text/css" href="res/css/style.css" /> 
-	<link rel="stylesheet" media="screen" type="text/css" href="res/css/layout.css" /> 
-
-	<title>SimpleSAMLphp Documentation</title> 
+  <title>SimpleSAMLphp Documentation</title>
 </head>
+<body>
 
-<body onload='javascript:window.location.href = "latest/index.html";'>
-
-<div id="redirect_notice" >
-	This page will redirect to the latest version of the SimpleSAMLphp documentation. If you have disabled javascript, please select the link to manually proceed to the latest documentation: 
-	<a href='./latest/index.html'>Latest</a>
-</div>
+<p>This page will redirect to <a href="./latest/index.html">the latest version
+of the SimpleSAMLphp documentation</a>.</p>
 
 </body>
 </html>
