deploy: af614b4a0205acd852d3ff22c2e21fdea3350c16

--- a/latest/simplesamlphp-idp-more.html
+++ b/latest/simplesamlphp-idp-more.html
@@ -90,12 +90,42 @@
 </header><h1 id="simplesamlphp-identity-provider-advanced-topics">
  SimpleSAMLphp Identity Provider Advanced Topics
 </h1>
-<!-- 
-  This file is written in Markdown syntax. 
-  For more information about how to use the Markdown syntax, read here:
-  http://daringfireball.net/projects/markdown/syntax
--->
-<!-- {{TOC}} -->
+<div class="toc">
+ <ul>
+  <li>
+   <a href="#simplesamlphp-identity-provider-advanced-topics.html">
+    SimpleSAMLphp Identity Provider Advanced Topics
+   </a>
+   <ul>
+    <li>
+     <a href="#ajax-iframe-single-log-out.html">
+      AJAX iFrame Single Log-Out
+     </a>
+    </li>
+    <li>
+     <a href="#attribute-release-consent.html">
+      Attribute Release Consent
+     </a>
+    </li>
+    <li>
+     <a href="#support-for-bookmarking-the-login-page.html">
+      Support for bookmarking the login page
+     </a>
+    </li>
+    <li>
+     <a href="#idp-first-flow.html">
+      IdP-first flow
+     </a>
+    </li>
+    <li>
+     <a href="#idp-initiated-logout.html">
+      IdP-initiated logout
+     </a>
+    </li>
+   </ul>
+  </li>
+ </ul>
+</div>
 <h2 id="ajax-iframe-single-log-out">
  AJAX iFrame Single Log-Out
 </h2>
