--- a/resources/index.html
+++ b/resources/index.html
@@ -3,13 +3,13 @@
   <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta http-equiv="Content-Language" content="en">
-  <meta http-equiv="refresh" content="0; url=./latest/index.html">
+  <meta http-equiv="refresh" content="0; url=./stable/index.html">
 
   <title>SimpleSAMLphp Documentation</title>
 </head>
 <body>
 
-<p>This page will redirect to <a href="./latest/index.html">the latest version
+<p>This page will redirect to <a href="./stable/index.html">the latest stable version
 of the SimpleSAMLphp documentation</a>.</p>
 
 </body>
