deploy: 25a81ce920a6ca21fd9a117578ba3aa4a57884f8

--- a/1.19/simplesamlphp-changelog.html
+++ b/1.19/simplesamlphp-changelog.html
@@ -99,7 +99,7 @@ See the upgrade notes for specific information about upgrading.
  Version 1.19.6
 </h2>
 <p>
- Released TBD
+ Released 1-7-2022
 </p>
 <div class="codehilite">
  <pre><span></span><code><span class="o">*</span> <span class="nv">Fix</span> <span class="nv">several</span> <span class="nv">translations</span> <span class="ss">(</span><span class="sc">#1572</span>, <span class="sc">#1573</span>, <span class="sc">#1577</span>, <span class="sc">#1578</span>, <span class="sc">#1603</span><span class="ss">)</span>
