--- a/devel/simplesamlphp-maintenance.html
+++ b/devel/simplesamlphp-maintenance.html
@@ -593,15 +593,36 @@ Username and password for accessing the database can be configured in the
  <code>
   store.redis.prefix
  </code>
- option. For Redis instances that
+ option.
+</p>
+<p>
+ For Redis instances that
  <a href="https://redis.io/commands/auth">
   require authentication
  </a>
- , use the
+ :
+* If authentication is managed with the
+ <code>
+  requirepass
+ </code>
+ directive (legacy password protection): use the
  <code>
   store.redis.password
  </code>
- option.
+ option
+* If authentication is managed with
+ <a href="https://redis.io/docs/manual/security/acl/">
+  ACL's
+ </a>
+ (which are recommended as of Redis 6): use the
+ <code>
+  store.redis.password
+ </code>
+ and
+ <code>
+  store.redis.username
+ </code>
+ options
 </p>
 <h2 id="metadata-storage">
  Metadata storage
